Fix axe-core false positive color contrast test
The "Example" grey box shown for each component preview was causing the axe-core colour-contrast check to report as "incomplete". We would then advise that the component needs to be manually checked.

The "Example" element was being nested within the component itself, so was also being included as part of the accessibility test. The accessibility test would then mark the test as incomplete because the "Example" element uses the :before psuedo class to set both the color and background-color which cannot be tested.

--- a/app/assets/stylesheets/component_guide/application.scss
+++ b/app/assets/stylesheets/component_guide/application.scss
@@ -132,18 +132,6 @@ $gem-guide-border-width: 1px;
   &.component-output {
     padding: 0;
   }
-
-  &:before {
-    @include govuk-font($size: 14);
-    content: attr(data-content);
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: .2105em .7894em;
-    background: $govuk-border-colour;
-    color: govuk-colour("black");
-    font-weight: bold;
-  }
 }
 
 .component-guide-preview--simple {
@@ -190,6 +178,16 @@ $gem-guide-border-width: 1px;
 
   .selector {
     font-style: italic;
+  }
+
+  &:before {
+    @include govuk-font($size: 14);
+    content: attr(data-content);
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: .2105em .7894em;
+    font-weight: bold;
   }
 }
 
